<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_label"
                    android:text="@string/device_name" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_semicolon"
                    android:text="@string/semicolon" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_value"
                    android:text="@string/triple_dots" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_label"
                    android:text="@string/device_address" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_semicolon"
                    android:text="@string/semicolon" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_value"
                    android:text="@string/triple_dots" />
            </LinearLayout>

            <View style="@style/Divider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/some_words"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_label"
                    android:text="@string/last_paired" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_semicolon"
                    android:text="@string/semicolon" />

                <TextView
                    android:id="@+id/txtLastDevice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_value"
                    android:text="@string/triple_dots" />
            </LinearLayout>


            <View style="@style/Divider"/>

            <Switch
                android:id="@+id/switchOverride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:switchPadding="10dp"
                android:text="@string/override_pair_request" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>